--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,6 @@
     <link rel="manifest" href="/manifest.json" />
   </head>
   <body>
-    <app-page-root />
+    <app-page-root></app-page-root>
   </body>
 </html>
